--- a/MasterHomebrewer/app/views/brewers/show.html.erb
+++ b/MasterHomebrewer/app/views/brewers/show.html.erb
@@ -8,3 +8,8 @@
 
   <%= button_to "Destroy this brewer", @brewer, method: :delete %>
 </div>
+
+
+<h2>Score Sheets</h2>
+
+<%= render @brewer.score_sheets %>
