--- a/MasterHomebrewer/app/views/brewers/_brewer.html.erb
+++ b/MasterHomebrewer/app/views/brewers/_brewer.html.erb
@@ -1,17 +1,14 @@
-<div id="<%= dom_id brewer %>">
-  <p>
-    <strong>First name:</strong>
+<div id="<%= dom_id brewer %>" class="card col-6">
+<div class="card-header">Brewer</div>
+<div class="card-body">
+  <h5 class="card-title"> 
     <%= brewer.first_name %>
-  </p>
-
-  <p>
-    <strong>Last name:</strong>
-    <%= brewer.last_name %>
-  </p>
-
+    <%= brewer.last_name %> 
+  </h5>
   <p>
     <strong>Club:</strong>
     <%= brewer.club %>
   </p>
-
+  <!-- Put the rank and Titles hear -->
+</div>
 </div>
