--- a/MasterHomebrewer/app/views/score_sheets/_score_sheet.html.erb
+++ b/MasterHomebrewer/app/views/score_sheets/_score_sheet.html.erb
@@ -1,17 +1,4 @@
-<div id="<%= dom_id score_sheet %>">
-  <p>
-    <strong>Category:</strong>
-    <%= score_sheet.category %>
-  </p>
-
-  <p>
-    <strong>Score:</strong>
-    <%= score_sheet.score %>
-  </p>
-
-  <p>
-    <strong>Brewer:</strong>
-    <%= score_sheet.brewer_id %>
-  </p>
-
-</div>
+<tr>
+  <td><%= score_sheet.category %></td>
+  <td><%= score_sheet.score %></td>
+</tr>
