--- a/MasterHomebrewer/app/assets/stylesheets/application.scss
+++ b/MasterHomebrewer/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+
+a {
+    text-decoration: none;
+}
